add to library excluded books